[gd_scene load_steps=4 format=3 uid="uid://vi2i12x2q47s"]

[ext_resource type="Script" path="res://Scripts/Entities/Weapons/PointDefenseCannon.gd" id="1_67iai"]
[ext_resource type="Texture2D" uid="uid://msi4v1kh72sk" path="res://Art/pdcTurret.png" id="2_m5met"]
[ext_resource type="Texture2D" uid="uid://bco62h01afoln" path="res://Art/pdcBarrel.png" id="3_oono1"]

[node name="PointDefenseCannon" type="Node2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_67iai")
detection_range_meters = 10000.0
firing_range_meters = 10000.0
fire_rate = 100.0

[node name="TurretSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_m5met")

[node name="BarrelSprite" type="Sprite2D" parent="TurretSprite"]
position = Vector2(0, -103)
texture = ExtResource("3_oono1")
